--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,16 +12,16 @@
 </head>
 <body>
     <header>
-        <div class="conteiner">
+        <div class="container">
             <div class="header">
-                <a href="#" class="header-logo"></a>
+                <a class="header-logo" href="#"></a>
                 <nav>
                     <ul class="header-nav">
                         <li>
-                            <a href="#" class="active">Главная</a>
+                            <a href="#">Главная</a>
                         </li>
                         <li>
-                            <a href="#">Меню</a>
+                            <a class="active" href="#">Меню</a>
                         </li>
                         <li>
                             <a href="#">О нас</a>
@@ -33,7 +33,7 @@
                 </nav>
                 <button type="button" class="button">
                     <span class="button-item">
-                        <img src="images/cart.svg" alt="Корзина">
+                        <img src="images/cart.svg" alt="Корзинка">
                         <span class="button-count">5</span>
                     </span>
                     <span class="button-text">$125</span>
@@ -42,17 +42,13 @@
         </div>
     </header>
     <div class="bg">
-        <div class="conteiner">
+        <div class="container">
             <ul class="breadcrumbs">
                 <li>
-                    <a href="#">
-                        Главная
-                    </a>
+                    <a href="#">Главная</a>
                 </li>
                 <li>
-                    <a href="#">
-                        Меню
-                    </a>
+                    <a href="#">Меню</a>
                 </li>
             </ul>
             <h1 class="title">Наше Меню</h1>
@@ -61,5 +57,22 @@
             </p>
         </div>
     </div>
+    <main>
+        <div class="banner">
+            <div class="container">
+                <div class="banner-box">
+                    <h2 class="banner-title">
+                        <span>скидка</span>
+                        -30%
+                    </h2>
+                    <p class="banner-text">
+                        Только при покупке 3-х и более позиций, мы&nbsp;дарим скидку. Акции не суммируются.
+                    </p>
+                    <a href="#" class="banner-link">купить сейчас</a>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
