--- a/index.html
+++ b/index.html
@@ -14,23 +14,25 @@
     <header>
         <div class="container">
             <div class="header">
-                <a class="header-logo" href="#"></a>
-                <nav>
-                    <ul class="header-nav">
-                        <li>
-                            <a href="#">Главная</a>
-                        </li>
-                        <li>
-                            <a class="active" href="#">Меню</a>
-                        </li>
-                        <li>
-                            <a href="#">О нас</a>
-                        </li>
-                        <li>
-                            <a href="#">Контакты</a>
-                        </li>
-                    </ul>
-                </nav>
+                <div class="header-item">
+                    <a class="header-logo" href="#"></a>
+                    <nav>
+                        <ul class="header-nav">
+                            <li>
+                                <a href="#">Главная</a>
+                            </li>
+                            <li>
+                                <a class="active" href="#">Меню</a>
+                            </li>
+                            <li>
+                                <a href="#">О нас</a>
+                            </li>
+                            <li>
+                                <a href="#">Контакты</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
                 <button type="button" class="button">
                     <span class="button-item">
                         <img src="images/cart.svg" alt="Корзинка">
@@ -233,9 +235,13 @@
                     </ul>
                 </div>
                 <div class="footer-tel">
-                    <ul class="footer-list">
-                        <li>+ 7 900 787 13-13</li>
-                        <li>+ 7 900 700 14-14</li>
+                    <ul class="footer-list footer-list-tel">
+                        <li>
+                            <a href="tel:+79007871313">+ 7 900 787 13-13</a>
+                        </li>
+                        <li>
+                            <a href="tel:+79007001414">+ 7 900 700 14-14</a>
+                        </li>
                     </ul>
                 </div>
             </div>
